case studies and services

--- a/services/index.html
+++ b/services/index.html
@@ -1,78 +1,98 @@
 ---
 layout: page
 title: Services
-group: navigation
-header: true
-light: true
-transparent: true
-lat: 18.3333
-lng: -64.7333
-zoom: 5
-lat2: -9.4667
-lng2: 159.9
-zoom2: 6
+group: navigation 
 ---
 {% include JB/setup %}
 <div class="container about">
- 	<div class="row bug">
- 		<div class="col-sm-6 col-md-6">
- 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/vi-dock.JPG"/>
- 		</div>
-  		<div class="col-sm-6 col-md-6">
-  			<h2>Digital Deck U.S. Virgin Islands and Puerto Rico</h2>
-  			<p class="dark">The Problem</p>
-			<p>Fishermen and fisheries managers in the U.S. Virgin Islands (USVI) have expressed a need for a complete and real-time approach to accessing fishery harvest information. Proactive, collaborative fisheries resource management to deliver long-term economic and biodiversity health requires near-to-real time data.</p>
-			<p>Working closely with fishermen and fisheries in the US Virgin Islands, Point 97 designed the Digital Deck platform, a data collection and reporting tool designed to transition legacy, manual and error prone data practices into reliable fishery harvest data. Digital Deck delivers a simple, easy-to-use interface via cell phone, tablet or computer technology, enabling fishermen to digitally collect their harvest data and easily transmit the data to fisheries managers.</p>
+	<div class="row bug">
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_windmills.png" />
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<h2>
+				Offshore wind power. Million-dollar views. New Panamax ships. Blue-label ﬁsh.
+			</h2>
+			<p>
+				We are asking more and more of the coast and the ocean.
+			</p>
+			<p>
+				How do we decide the best and highest uses in a complex environment?
+			</p>
+			<p>
+				<span class="dark">
+					At Point 97, we have been tackling that question in increasingly sophisticated ways
+					for over 20 years,
+				</span>
+				in collaboration with ﬁshing communities, energy developers, conservation groups,
+				governments, maritime industry, coastal landowners and other stakeholders around
+				the world.
+			</p>
+		</div>
+	</div>
+	
+	<div class="row bug">
 
-  		</div>
-  	</div>
- 	<div class="row bug">
- 		<div class="col-sm-6 col-md-6">
-  			<p class="dark">Rethinking Paper Catch Reports</p>
-  			<p>Tracking fish harvest in near-to-real time ensures that USVI fisheries managers can assess harvests in relation to established Annual Catch Limits, and that fisherman can monitor their catch totals against catch quotas. USVI fishermen have the added benefit of accessing their historical trip data, informing future business planning. Over time, Point 97’s Digital Deck platform promotes collaborative fishing efforts among fishermen, better tracking and management of fisheries data, and adds market value to seafood, while empowering fishermen to make better harvest decisions.</p>
+	
+		<div class="col-sm-6 col-md-6">
+			<p class="dark">
+				Software Development Services
+			</p>
+			<p>Point 97 builds tools for data collection and marine planning from conception through implementation. Built in an open-source and highly intuitive platform, our tools offer a simple, flexible, and powerful means of gathering expertise from resource managers, scientists, community stakeholders, and the public in a transparent and collaborative decision-making process.
+			<p class="dark">Our tools:</p>
+			<ul class="list-unstyle">
+				<li>Collect, organize, and visualize ocean use data and spatial information.</li>
+				<li>Allow for consideration of multiple management objectives.</li>
+				<li>Facilitate participation and place-based discussion.</li>
+				<li>Build transparency.</li>
+				<li>Explore and evaluate management alternatives.</li>
+			</ul>
 
-  			<p>Most fisheries managers and fishermen would acknowledge paper log reports and manual data entry is time consuming, inefficient, and lacks historical track-back methods for management and fishing business optimization. Translating and digitizing the dense paper catch reports is the first step towards creating resource management efficiencies. In the case of USVI, the Point 97 team analyzed the paper catch report forms currently used across St. Thomas, St. John, St. Croix and Puerto Rico, respectively.  Recognizing each paper form supports dense and unique data entry points covering all of the main types of fisheries (hook and line, traps, nets, spear/hand), the Point 97 team broke these forms down into smaller groups of questions, documenting the validation required at each step of the fisherman’s input.</p>
-  		</div>
- 		<div class="col-sm-6 col-md-6">
- 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/deck.jpg"/>
- 		</div>
-  	</div>
- 	<div class="row bug">
- 		<div class="col-sm-6 col-md-6">
- 			<img style="padding-top: 20px" src="{{ ASSET_PATH }}/images/services/central-market-vendor.jpg"/>
- 		</div>
-  		<div class="col-sm-6 col-md-6">
-  			<h2>Digital Deck Solomon Islands, HapiFis</h2>
-  			<p class="dark">Collect and manage fisheries data more efficiently</p>
-  			Point 97 linked up with the Solomon Islands government and the Coral Triangle Initiative to develop a new mobile
-  			app that will improve the ability of surveyors to record exactly what kind of
-  			fish and how much is entering Solomon Island fish markets. The new mobile app, called Hapi
-  			Fis, will allow accurate recording and instantaneous wireless transmission
-  			of fish survey information to a database programmed to analyze the data and
-  			generate useful reports for managers, on demand.</p>
-  			<p>By improving on flawed paper survey systems, the
-  			government will have better understanding of total catch across the islands. The app sets 
-  			an example for other Coral Triangle and Pacific countries by using technology
-  			to support local economies and food security for inshore fisheries.</p>
- 			<p>Digital Deck is designed to meet the expressed needs of community fishing organizations and fisheries agencies for collecting and integrating fisheries data supporting harvest accountability, traceability, collaborative research, spatial planning, and monitoring.</p>
- 			<ul>
-	 			<li>Mobile data capture at sea</li>
-	 			<li>Access to catch history</li>
-	 			<li>Meet agency logbook requirements</li>
-	 			<li>Track progress towards fishery management goals</li>
-	 			<li>Open Source License</li>
-	 		</ul>
-  		</div>
-  	</div>
- 	<div class="row bug">
- 		<div class="col-sm-6 col-md-6">
-  			<h2>Marine Planner</h2>
-  			<p class="dark">Collaborative planning and engagement</p>
- 			<p>Designed to meet the needs of government agencies, planning bodies, and industry, Marine Planner engages in marine planning activities through data visualization, spatial analysis, and public and stakeholder engagement.</p>
- 			<p>Marine Planner meets one or all of these needs by offering a powerful web-based platform along with additional software components for collaboration, analysis, and visualization that can be quickly added and tailored to your needs in a cost-effective way.  Give your audience everything they need and nothing they don’t.</p>
-  		</div>
- 		<div class="col-sm-6 col-md-6">
- 			<img src="{{ ASSET_PATH }}/images/screenshots/mp-features.png" />
- 		</div>
-  	</div>
+
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/screenshots/dash.png" />
+		</div>
+		
+		
+	</div>
+	<div class="row bug">
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_fisherman.png" />
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<p class="dark">Stakeholder Engagement and Advisory Services</p>
+			<p>As competing demands on our oceans continue to rise, finding ways to engage all stakeholders in ocean planning has never been more important. Point 97 offers a range of advisory services, including:</p>
+			<ul>
+			<li>Program facilitation and management related to decision making processes.</li>
+			<li>Technical capacity building.</li>
+			<li>Training for governance.</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row bug">
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_map.png" />
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-6 col-md-6">
+			<p class="dark">Data Collection, Analysis, and Synthesis</p>
+			<p>Information management and robust ocean data are the building blocks for regional ocean planning. Point 97 will help you collect, analyze, and synthesize the data you need for better decision making.</p>
+			<p class="dark">Our services include:</p>
+<li>Survey design and implementation to compile spatial data on ocean use patterns, associated economic values, and social characteristics.</li>
+<li>Production of spatial products that depict where ocean activities occur and illustrate economic, cultural, or social significance to inform coastal and marine spatial planning, community-based fisheries management, and marine indigenous rights protection.</li>
+<li>Baseline assessments of social, cultural, and economic changes resulting from management decisions.</li>
+</ul>
+			<p class="pull-right">
+				<a href="/case-studies/index.html"><i class="icon-arrow-right"> </i> FIND OUT MORE ABOUT POINT 97</a>
+			</p>
+		</div>
+	</div>
 </div>
