titles on about

--- a/services/index.html
+++ b/services/index.html
@@ -37,9 +37,9 @@ group: navigation
 
 	
 		<div class="col-sm-6 col-md-6">
-			<p class="dark">
+			<h3>
 				Software Development Services
-			</p>
+			</h3>
 			<p>Point 97 builds tools for data collection and marine planning from conception through implementation. Built in an open-source and highly intuitive platform, our tools offer a simple, flexible, and powerful means of gathering expertise from resource managers, scientists, community stakeholders, and the public in a transparent and collaborative decision-making process.
 			<p class="dark">Our tools:</p>
 			<ul class="list-unstyle">
@@ -67,7 +67,7 @@ group: navigation
 		<div class="col-sm-1 col-md-1">
 		</div>
 		<div class="col-sm-6 col-md-6">
-			<p class="dark">Stakeholder Engagement and Advisory Services</p>
+			<h3>Stakeholder Engagement and Advisory Services</H3>
 			<p>As competing demands on our oceans continue to rise, finding ways to engage all stakeholders in ocean planning has never been more important. Point 97 offers a range of advisory services, including:</p>
 			<ul>
 			<li>Program facilitation and management related to decision making processes.</li>
@@ -83,7 +83,7 @@ group: navigation
 		<div class="col-sm-1 col-md-1">
 		</div>
 		<div class="col-sm-6 col-md-6">
-			<p class="dark">Data Collection, Analysis, and Synthesis</p>
+			<H3>Data Collection, Analysis, and Synthesis</H3>
 			<p>Information management and robust ocean data are the building blocks for regional ocean planning. Point 97 will help you collect, analyze, and synthesize the data you need for better decision making.</p>
 			<p class="dark">Our services include:</p>
 <li>Survey design and implementation to compile spatial data on ocean use patterns, associated economic values, and social characteristics.</li>
