--- a/services/index.html
+++ b/services/index.html
@@ -55,7 +55,7 @@ group: navigation
 		<div class="col-sm-1 col-md-1">
 		</div>
 		<div class="col-sm-5 col-md-5">
-			<img src="{{ ASSET_PATH }}/images/screenshots/dash.png" class="thumbnail"/>
+			<img src="{{ ASSET_PATH }}/images/about/about_DD.png" />
 		</div>
 		
 		
