--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -67,13 +67,14 @@ zoom2: 6
   	</div>
  	<div class="row bug">
  		<div class="col-sm-6 col-md-6">
-  			<h2>Marine Planner</h2>
+  			<h2>Marine Planner: MARCO</h2>
   			<p class="dark">Collaborative planning and engagement</p>
- 			<p>Designed to meet the needs of government agencies, planning bodies, and industry, Marine Planner engages in marine planning activities through data visualization, spatial analysis, and public and stakeholder engagement.</p>
- 			<p>Marine Planner meets one or all of these needs by offering a powerful web-based platform along with additional software components for collaboration, analysis, and visualization that can be quickly added and tailored to your needs in a cost-effective way.  Give your audience everything they need and nothing they don’t.</p>
+ 			  <p>MARCO is a data portal Point 97 built and rolled out to the Mid-Atlantic region. 57 million people live in this region, with millions accessing the coastal areas spanning recreational activities, fishing and wind developers. The Port of NY/NJ process about 3.2 million containers a year and commercial fisherman generate about $300 million in seafood. Against this background are wind developers seeking to supply energy to about 40 million homes. </p>
+
+        <p>The MARCO portal pulls together disparate data and provides a platform that equalizes various interests in the ocean so that various stakeholders speak the same language and can map their interests in a simple way–allowing users to accurately weigh their trade-offs AND collaborate on decisions.</p>
   		</div>
  		<div class="col-sm-6 col-md-6">
- 			<img src="{{ ASSET_PATH }}/images/screenshots/mp-features.png" />
+ 			<img src="{{ ASSET_PATH }}/images/screenshots/mp-features.jpg" />
  		</div>
   	</div>
 </div>
