--- a/services/index.html
+++ b/services/index.html
@@ -1,98 +1,114 @@
 ---
-layout: page
+layout: page 
 title: Services
-group: navigation 
+group: navigation
 ---
 {% include JB/setup %}
 <div class="container about">
 	<div class="row bug">
-		<div class="col-sm-5 col-md-5">
-			<img src="{{ ASSET_PATH }}/images/about/about_windmills.png" />
-		</div>
-		<div class="col-sm-1 col-md-1">
-		</div>
-		<div class="col-sm-6 col-md-6">
-			<h2>
-				Offshore wind power. Million-dollar views. New Panamax ships. Blue-label ﬁsh.
-			</h2>
-			<p>
-				We are asking more and more of the coast and the ocean.
-			</p>
-			<p>
-				How do we decide the best and highest uses in a complex environment?
-			</p>
-			<p>
-				<span class="dark">
-					At Point 97, we have been tackling that question in increasingly sophisticated ways
-					for over 20 years,
-				</span>
-				in collaboration with ﬁshing communities, energy developers, conservation groups,
-				governments, maritime industry, coastal landowners and other stakeholders around
-				the world.
-			</p>
-		</div>
-	</div>
-	
-	<div class="row bug">
-
-	
 		<div class="col-sm-6 col-md-6">
 			<h3>
 				Software Development Services
 			</h3>
-			<p>Point 97 builds tools for data collection and marine planning from conception through implementation. Built in an open-source and highly intuitive platform, our tools offer a simple, flexible, and powerful means of gathering expertise from resource managers, scientists, community stakeholders, and the public in a transparent and collaborative decision-making process.
-			<p class="dark">Our tools:</p>
-			<ul class="list-unstyle">
-				<li>Collect, organize, and visualize ocean use data and spatial information.</li>
-				<li>Allow for consideration of multiple management objectives.</li>
-				<li>Facilitate participation and place-based discussion.</li>
-				<li>Build transparency.</li>
-				<li>Explore and evaluate management alternatives.</li>
-			</ul>
-
-
+			<p>
+				Point 97 builds tools for data collection and marine planning from conception through
+				implementation. Built in an open-source and highly intuitive platform, our tools
+				offer a simple, flexible, and powerful means of gathering expertise from resource
+				managers, scientists, community stakeholders, and the public in a transparent and
+				collaborative decision-making process.
+				<p class="dark">
+					Our tools:
+				</p>
+				<ul class="list-unstyle">
+					<li>
+						Collect, organize, and visualize ocean use data and spatial information.
+					</li>
+					<li>
+						Allow for consideration of multiple management objectives.
+					</li>
+					<li>
+						Facilitate participation and place-based discussion.
+					</li>
+					<li>
+						Build transparency.
+					</li>
+					<li>
+						Explore and evaluate management alternatives.
+					</li>
+				</ul>
 		</div>
 		<div class="col-sm-1 col-md-1">
 		</div>
 		<div class="col-sm-5 col-md-5">
 			<img src="{{ ASSET_PATH }}/images/about/about_DD.png" />
 		</div>
-		
-		
 	</div>
 	<div class="row bug">
-		<div class="col-sm-5 col-md-5">
-			<img src="{{ ASSET_PATH }}/images/about/about_fisherman.png" />
-		</div>
-		<div class="col-sm-1 col-md-1">
-		</div>
-		<div class="col-sm-6 col-md-6">
-			<h3>Stakeholder Engagement and Advisory Services</H3>
-			<p>As competing demands on our oceans continue to rise, finding ways to engage all stakeholders in ocean planning has never been more important. Point 97 offers a range of advisory services, including:</p>
-			<ul>
-			<li>Program facilitation and management related to decision making processes.</li>
-			<li>Technical capacity building.</li>
-			<li>Training for governance.</li>
-			</ul>
-		</div>
-	</div>
-	<div class="row bug">
-		<div class="col-sm-6 col-md-6">
-			<H3>Data Collection, Analysis, and Synthesis</H3>
-			<p>Information management and robust ocean data are the building blocks for regional ocean planning. Point 97 will help you collect, analyze, and synthesize the data you need for better decision making.</p>
-			<p class="dark">Our services include:</p>
-<li>Survey design and implementation to compile spatial data on ocean use patterns, associated economic values, and social characteristics.</li>
-<li>Production of spatial products that depict where ocean activities occur and illustrate economic, cultural, or social significance to inform coastal and marine spatial planning, community-based fisheries management, and marine indigenous rights protection.</li>
-<li>Baseline assessments of social, cultural, and economic changes resulting from management decisions.</li>
-</ul>
-			<p class="pull-right">
-				<a href="/case-studies/index.html"><i class="icon-arrow-right"> </i> FIND OUT MORE ABOUT POINT 97</a>
-			</p>
-		</div>
 		<div class="col-sm-5 col-md-5">
 			<img src="{{ ASSET_PATH }}/images/about/about_map.png" />
 		</div>
 		<div class="col-sm-1 col-md-1">
 		</div>
+		<div class="col-sm-6 col-md-6">
+			<H3>
+				Data Collection, Analysis, and Synthesis
+			</H3>
+			<p>
+				Information management and robust ocean data are the building blocks for regional
+				ocean planning. Point 97 will help you collect, analyze, and synthesize the data
+				you need for better decision making.
+			</p>
+			<p class="dark">
+				Our services include:
+			</p>
+			<li>
+				Survey design and implementation to compile spatial data on ocean use patterns,
+				associated economic values, and social characteristics.
+			</li>
+			<li>
+				Production of spatial products that depict where ocean activities occur and illustrate
+				economic, cultural, or social significance to inform coastal and marine spatial planning,
+				community-based fisheries management, and marine indigenous rights protection.
+			</li>
+			<li>
+				Baseline assessments of social, cultural, and economic changes resulting from management
+				decisions.
+			</li>
+			</ul>
+		</div>
+
+	</div>
+	<div class="row bug">
+	
+		<div class="col-sm-6 col-md-6">
+			<h3>
+				Stakeholder Engagement and Advisory Services
+			</H3>
+			<p>
+				As competing demands on our oceans continue to rise, finding ways to engage all
+				stakeholders in ocean planning has never been more important. Point 97 offers a range
+				of advisory services, including:
+			</p>
+			<ul>
+				<li>
+					Program facilitation and management related to decision making processes.
+				</li>
+				<li>
+					Technical capacity building.
+				</li>
+				<li>
+					Training for governance.
+				</li>
+			</ul>
+			<p class="pull-right">
+				<a href="/case-studies/index.html"><i class="icon-arrow-right"> </i> FIND OUT MORE ABOUT POINT 97</a>
+			</p>
+		</div>
+		<div class="col-sm-1 col-md-1">
+		</div>
+		<div class="col-sm-5 col-md-5">
+			<img src="{{ ASSET_PATH }}/images/about/about_fisherman.png" />
+		</div>
+		
 	</div>
 </div>
